5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1644_2703.log
== TEST (2019-04-05 12:34:54) 
-- CODE:
x=int(input("idade: "))

if x==18:
	mensagem = "eleitor"
else:
	mensagem= "nao_leitor"
	
print(mensagem)
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 12:35:00) 
-- CODE:
x=int(input("idade: "))

if x==18:
	mensagem = "eleitor"
else:
	mensagem= "nao_leitor"
	
print(mensagem)
-- EXECUTION TIME:
0.148299
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_leitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_leitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_leitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:35:17) 
-- CODE:
x=int(input("idade: "))

if x==18:
	mensagem = "eleitor"
else:
	mensagem= "nao_leitor"
	
print(mensagem)
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:35:36) 
-- CODE:
x=int(input("idade: "))

if x>=18:
	mensagem = "eleitor"
else:
	mensagem= "nao_leitor"
	
print(mensagem)
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 12:35:40) 
-- CODE:
x=int(input("idade: "))

if x>=18:
	mensagem = "eleitor"
else:
	mensagem= "nao_leitor"
	
print(mensagem)
-- EXECUTION TIME:
0.13889
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_leitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:35:45) 
-- CODE:
x=int(input("idade: "))

if x>=18:
	mensagem = "eleitor"
else:
	mensagem= "nao_leitor"
	
print(mensagem)
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:35:54) 
-- CODE:
x=int(input("idade: "))

if x >= 18:
	mensagem = "eleitor"
else:
	mensagem= "nao_leitor"
	
print(mensagem)
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:35:58) 
-- CODE:
x=int(input("idade: "))

if x >= 18:
	mensagem = "eleitor"
else:
	mensagem= "nao_leitor"
	
print(mensagem)
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 12:36:07) 
-- CODE:
x=int(input("idade: "))

if x >= 18:
	mensagem = "eleitor"
else:
	mensagem= "nao_leitor"
	
print(mensagem)
-- EXECUTION TIME:
0.147306
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_leitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 12:36:34) 
-- CODE:
x=int(input("idade: "))

if x >= 18:
	mensagem = "eleitor"
else:
	mensagem= "nao_leitor"
	
print(mensagem)
-- EXECUTION TIME:
0.196008
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_leitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:36:35) 
-- CODE:
x=int(input("idade: "))

if x >= 18:
	mensagem = "eleitor"
else:
	mensagem= "nao_leitor"
	
print(mensagem)
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:44:04) 
-- CODE:
x=int(input("idade: "))

if (x) >= 18:
	mensagem = "eleitor"
else:
	mensagem = "nao_leitor"
	
print(mensagem)
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 12:44:06) 
-- CODE:
x=int(input("idade: "))

if (x) >= 18:
	mensagem = "eleitor"
else:
	mensagem = "nao_leitor"
	
print(mensagem)
-- EXECUTION TIME:
0.177829
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_leitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:45:21) 
-- CODE:

idade da pessoa=int(input("idade: "))

if (idade da pessoa) >= 18:
	mensagem = "eleitor"
else:
	mensagem = "nao_leitor"
	
print(mensagem)
-- ERROR:
File "XXXX", line 2
    idade da pessoa=int(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:45:37) 
-- CODE:

idade=int(input("idade: "))

if (idade) >= 18:
	mensagem = "eleitor"
else:
	mensagem = "nao_leitor"
	
print(mensagem)
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 12:45:41) 
-- CODE:

idade=int(input("idade: "))

if (idade) >= 18:
	mensagem = "eleitor"
else:
	mensagem = "nao_leitor"
	
print(mensagem)
-- EXECUTION TIME:
0.141071
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_leitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:45:58) 
-- CODE:

idade=int(input("idade: "))

if (idade) >= 18:
	me = "eleitor"
else:
	me = "nao_leitor"
	
print(me)
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 12:46:28) 
-- CODE:

idade=int(input("idade: "))

if (idade) >= 18:
	me = "eleitor"
else:
	me = "nao_eleitor"
	
print(me)
-- EXECUTION TIME:
0.144186
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
idade: eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
idade: eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:46:41) 
-- CODE:

idade=int(input("idade: "))

if (idade) >= 18:
	me = "eleitor"
else:
	me = "nao_eleitor"
	
print(me)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:46:41) 
-- CODE:

idade=int(input("idade: "))

if (idade) >= 18:
	me = "eleitor"
else:
	me = "nao_eleitor"
	
print(me)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:46:41) 
-- CODE:

idade=int(input("idade: "))

if (idade) >= 18:
	me = "eleitor"
else:
	me = "nao_eleitor"
	
print(me)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:46:41) 
-- CODE:

idade=int(input("idade: "))

if (idade) >= 18:
	me = "eleitor"
else:
	me = "nao_eleitor"
	
print(me)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:46:41) 
-- CODE:

idade=int(input("idade: "))

if (idade) >= 18:
	me = "eleitor"
else:
	me = "nao_eleitor"
	
print(me)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:46:41) 
-- CODE:

idade=int(input("idade: "))

if (idade) >= 18:
	me = "eleitor"
else:
	me = "nao_eleitor"
	
print(me)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 12:46:41) 
-- CODE:

idade=int(input("idade: "))

if (idade) >= 18:
	me = "eleitor"
else:
	me = "nao_eleitor"
	
print(me)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 12:46:42) 
-- CODE:

idade=int(input("idade: "))

if (idade) >= 18:
	me = "eleitor"
else:
	me = "nao_eleitor"
	
print(me)
-- EXECUTION TIME:
0.115075
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:29:00) 
-- CODE:
idade=int(input("idade: "))

if (idade) >= 18:
	me = "eleitor"
else:
	me = "nao_eleitor"
	
print(me)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
